fix bin2dec alignment

--- a/projects/bin2dec/css/styles.css
+++ b/projects/bin2dec/css/styles.css
@@ -1,8 +1,9 @@
 .container {
 	margin: 0 auto;
-	width: 400px;
+	width: 390px;
 }
 
+h1,
 form {
 	text-align: center;
 }
